- added a "cortex" process for IPC between the processes
- added a forwarding mode (with cache)
- changed the config file version from 9 back to 1
- changed how a question gets parsed (build_question()), hopeing to get
  more security out of this
- in dddctl query allow a class to be specified (-c)
- added RP, HINFO and CAA RR support in all areas except dddctl query
- added extra security measure to prevent DNS poisoning by AXFR
- add a SOA constraint on rzone's to constrain SOA refresh/retry/expire values
  by default these are 60/60/60
- terminology changes blacklist->blocklist, whitelist->passlist, 
  anything_slave() to anything_ddd(), to keep with the times
- made the 3G database truly RW (before there was some memcpy'ing going on 
that corrupted pointers making the databse RO).
- improve on the speed of AXFR's for very large databases (tested on 1.4 million AAAA records, 2 seconds vs. 120 seconds).

[2019] Changes in RELEASE_1_4 from RELEASE_1_3

- dddctl can now count records in configtest
- dddctl can axfr zones, and query other dns data
- the database has been replaced with the 3G DB (3rd generation internal db)
- fixed logic leading up to DNSSEC NODATA ENT replies
- FreeLogic from Russia, offered an unalignment fix affecting rrlimit
- TSIG AXFR's and other TSIG support is now workin
- increased TXT's size from 255 to 1024 (for DKIM)
- TCP now doesn't block upon connect, it will close connections at 64 limit
- refactored the axfr with finer grained control with the mzone keyword
- added algorithm 13 in dddctl, for signing elliptic curves and conforming to
  RFC 8624
- change the default configfile to /etc/delphinusdns/delphinusdns.conf and
  update documentation for this
- add -X and -x argument for setting the serial automatically overriding what
  is in the zonefile
- refused answers now tag on the question, and add on a possible EDNS0 tag,
  which it did not do before.
- fixed referrer NS code with plain subzones incorporating some DNSSEC elements