@@ -21,13 +21,17 @@ Changes in RELEASE_1_5 from RELEASE_1_4
   more security out of this
 - in dddctl query allow a class to be specified (-c)
 - added RP, HINFO and CAA RR support in all areas except dddctl query
-- added extra security measure to prevent DNS poisoning by AXFR
 - add a SOA constraint on rzone's to constrain SOA refresh/retry/expire values
   by default these are 60/60/60
 - terminology changes blacklist->blocklist, whitelist->passlist, 
   anything_slave() to anything_ddd(), to keep with the times
 - made the 3G database truly RW (before there was some memcpy'ing going on 
 that corrupted pointers making the databse RO).
+- added extra security measure to prevent DNS poisoning by AXFR
+- added a bytelimit to how much one can AXFR from a remote site.  Unfortunately
+  this won't prevent a disk to fill up in most circumstances, but may give
+  an operator more time to notice what's going on.  It surely will prevent
+  memory exhaustion if used carefully.
 - improve on the speed of AXFR's for very large databases (tested on 1.4 million AAAA records, 2 seconds vs. 120 seconds).
 
 [2019] Changes in RELEASE_1_4 from RELEASE_1_3
